force-app/main/default/objects/T_qtc_sales_orederlines__c/T_qtc_sales_orederlines__c.object-meta.xml
<CustomObject>
    <label>T_qtc_sales_orederlines</label>
    <nameField>
        <label>T_qtc_sales_orederlines</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>T_qtc_sales_orederlines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>