force-app/main/default/objects/T_qtc_sales_orederlines__c/fields/Amount_Debit_Foreign_Currency__c.field-meta.xml
<CustomField>
    <fullName>Amount_Debit_Foreign_Currency__c</fullName>
    <label>Amount (Debit) (Foreign Currency)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>