force-app/main/default/objects/T_qtc_sales_orederlines__c/fields/Contract_Item_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Item_End_Date__c</fullName>
    <label>Contract Item End Date</label>
    <type>Date</type>
</CustomField>