force-app/main/default/objects/T_qtc_sales_orederlines__c/fields/OSA_Contract_Number_from_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>OSA_Contract_Number_from_Salesforce__c</fullName>
    <label>OSA Contract Number (from Salesforce)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>