force-app/main/default/objects/T_qtc_sales_orederlines__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Internal_ID__c</columns>
    <columns>Document_Number__c</columns>
    <columns>Line_ID__c</columns>
    <columns>Line_Sequence_Number__c</columns>
    <columns>Item__c</columns>
    <columns>Quantity__c</columns>
    <columns>of_Months__c</columns>
    <columns>Price_Level__c</columns>
    <columns>Item_Rate__c</columns>
    <columns>Rate_Foreign_Currency_without_Symbol__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>